Fix responsive layout issues

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -224,6 +224,7 @@ body {
 .second-right {
     width: 50%;
     padding: 10px;
+    margin-right: 70px;
 }
 
 .second-right h2 {
@@ -235,9 +236,10 @@ body {
 }
 
 .second-right h3 {
-    font-size: 30px;
+    font-size: 24px;
     margin-left: 70px;
     margin-top: 10px;
+  
 }
 
 .f-peragraph {
@@ -261,15 +263,21 @@ body {
 .third-container span {
     color: #1f4bff;
     padding-left: 50px;
-    font-size: 40px;
+    font-size: 36px;
     font-weight: 600;
    
+}
+.third-span{
+    color: #1f4bff;
+    padding-left: 50px;
+    font-size: 30px;
+    font-weight: 600;
 }
 
 .third-container h1 {
     padding-left: 50px;
     padding-top: 10px;
-    font-size: 26px;
+    font-size: 24px;
     text-align: center;
 }
 
@@ -289,7 +297,7 @@ body {
 
 .project-title {
     color: #1f4bff;
-    font-size: 35px !important;
+    font-size: 36px !important;
     font-weight: 700;
     display: block;
     margin-bottom: 10px;
@@ -298,7 +306,7 @@ body {
 
 .project-card h3 {
     display: inline-block;
-    font-size: 24px;
+    font-size: 22px;
     background: #f3e7e7;
     padding: 5px 10px;
     font-weight: 700;
@@ -446,7 +454,7 @@ body {
 }
 
 .services-heading {
-    font-size: 60px;
+    font-size: 40px;
     color: #1f4bff;
     text-align: center;
 }
@@ -489,7 +497,7 @@ body {
 }
 
 .cart>h4 {
-    font-size: 30px !important;
+    font-size: 30px;
 }
 
 .cart i {
@@ -687,14 +695,14 @@ body {
 
 #serve h2 {
     text-align: center;
-    font-size: 60px;
+    font-size: 40px;
     margin-top: 30px;
     color: #173fde;
 }
 
 #serve p {
     text-align: center;
-    font-size: 26px;
+    font-size: 22px;
     margin-top: 10px;
 }
 
@@ -849,7 +857,7 @@ img,
 }
 
 .second-right h2 {
-    font-size: 45px;
+    font-size: 40px;
     color: #1f4bff;
     margin-top: 5px;
 }
